# onyx

./: .gitignore  .gitmodules  .plan  CMakeLists.txt  Makefile  README.md  common.c  create.sh  d_display.c  d_display.h  def.h  f_file.c  f_file.h  g_game.c  g_game.h  hell  i_input.c  i_input.h  imageformats.h  locations.c  locations.h  m_math.c  m_math.h  main.c  main.cpp  private.h  r_api.h  r_commands.c  r_commands.h  r_geo.c  r_geo.h  r_pipeline.c  r_pipeline.h  r_raytrace.c  r_raytrace.h  r_render.c  r_render.h  r_renderpass.c  r_renderpass.h  s_max.h  (+34 more)
cmake/: CMakeLists.txt  ObsidianConfig.cmake.in  author_shaders.cmake  author_tests.cmake  fetch_shaderc.cmake  header.cmake  obsidianConfig.cmake.in  shaders.cmake
examples/: CMakeLists.txt  hello-glslang.c  hello-triangle.c  hello-ui.c
examples/shaders/: CMakeLists.txt
include/obsidian/: attribute.h  command.h  common.h  frame.h  geo.h  image.h  loader.h  max_prims.h  memory.h  obsidian.h  pipeline.h  private.h  raytrace.h  scene.h  swapchain.h  video.h  vulkan.h
include/onyx/: api.h  attribute.h  command.h  common.h  def.h  dtags.h  file.h  filegeo.h  frame.h  geo.h  image.h  loader.h  locations.h  max_prims.h  memory.h  onyx.h  pipeline.h  private.h  raytrace.h  render.h  renderpass.h  scene.h  swapchain.h  text.h  types.h  ui.h  util.h  video.h  vulkan.h
shaders/: CMakeLists.txt  common.glsl  post.frag  ui-box.frag  ui-slider.frag  ui-texture.frag  ui.vert
source/: CMakeLists.txt  command.c  common.c  file.c  frame.c  image.c  locations.c  memory.c  pipeline.c  raytrace.c  render.c  renderpass.c  scene.c  swapchain.c  text.c  util.c  video.c
src/: CMakeLists.txt  command.c  common.c  common.h  file.c  frame.c  geo.c  glslang-wrapper.cpp  glslang-wrapper.h  image.c  loader.c  locations.c  memory.c  pipeline.c  r_geo.h  r_pipeline.c  r_pipeline.h  r_renderpass.c  raytrace.c  render.c  renderpass.c  scene.c  swapchain.c  t_text.c  t_text.h  text.c  u_ui.c  u_ui.h  ui.c  util.c  v_command.c  v_command.h  v_image.c  v_image.h  v_memory.c  v_memory.h  v_swapchain.c  v_swapchain.h  v_video.c  v_video.h  (+1 more)
src/examples/: CMakeLists.txt  hello-triangle.c  hello-ui.c
src/examples/shaders/: CMakeLists.txt
src/include/obsidian/: api.h  command.h  common.h  def.h  file.h  framebuffer.h  geo.h  image.h  memory.h  obsidian.h  pipeline.h  raytrace.h  render.h  renderpass.h  scene.h  swapchain.h  text.h  types.h  ui.h  util.h  video.h  vulkan.h
src/lib/: CMakeLists.txt  command.c  command.h  common.c  common.h  dtags.h  f_file.c  f_file.h  f_prim.h  file.c  file.h  filegeo.h  framebuffer.h  geo.c  geo.h  image.c  loader.c  loader.h  memory.c  memory.h  obsidian.h  pipeline.c  pipeline.h  private.h  r_api.h  r_geo.c  r_geo.h  r_pipeline.c  r_pipeline.h  r_raytrace.c  r_raytrace.h  r_renderpass.c  r_renderpass.h  raytrace.c  raytrace.h  render.c  render.h  renderpass.c  s_scene.c  s_scene.h  (+23 more)
src/lib/shaders/: CMakeLists.txt
src/shaders/: CMakeLists.txt  common.glsl  ui.frag
src/tests/: scene-prims.c  startup.c
tests/: CMakeLists.txt  scene-prims.c  startup.c
tools/: rename.sh
